--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.11.3"
+    "@hono/zod-validator": "^0.7.6",
+    "hono": "^4.11.3",
+    "stripe": "^20.1.0",
+    "zod": "^4.3.4"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
