--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,10 @@
     "strict": true,
     "skipLibCheck": true,
     "lib": [
-      "ESNext"
+      "ESNext",
+      "DOM"
     ],
     "types": [
-      "vite/client",
       "@cloudflare/workers-types"
     ],
     "jsx": "react-jsx",
