--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -4,7 +4,8 @@
   "compatibility_date": "2025-08-03",
   "main": "./src/index.tsx",
   "vars": {
-    "ENVIRONMENT": "development"
+    "ENVIRONMENT": "development",
+    "APP_URL": "https://coin-store.david-llopislaguna.workers.dev"
   },
   "d1_databases": [
     {
