feat: add product seed data and update product handling in components
- Added a new SQL seed file for products with various credit packs.
- Updated Card component to use new product properties (product_name, product_description, price_cents).
- Modified LinkButton component for improved styling.
- Changed index.tsx to use ProductDb type for products.
- Updated Store page to accept ProductDb type for products.
- Enhanced auth middleware to handle session management with additional user data.
- Updated auth API to manage session creation and revocation.
- Adjusted payments API to work with ProductDb type and updated product data handling.
- Updated wrangler.jsonc to reflect new database ID.

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,22 +1,21 @@
 {
-  "$schema": "node_modules/wrangler/config-schema.json",
-  "name": "coin-store",
-  "compatibility_date": "2025-08-03",
-  "main": "./src/index.tsx",
-  "vars": {
-    "ENVIRONMENT": "development",
-    "APP_URL": "https://coin-store.david-llopislaguna.workers.dev"
-  },
-  "d1_databases": [
-    {
-      "binding": "DB",
-      "database_name": "coin-store-db",
-      "database_id": "0d71dd87-e01f-4d6d-ba83-4dda86e67fc1",
-      "remote": true
-    }
-  ],
-  "assets": {
-    "directory": "./public",
-    "binding": "ASSETS"
-  }
+	"$schema": "node_modules/wrangler/config-schema.json",
+	"name": "coin-store",
+	"compatibility_date": "2025-08-03",
+	"main": "./src/index.tsx",
+	"vars": {
+		"ENVIRONMENT": "development",
+		"APP_URL": "https://coin-store.david-llopislaguna.workers.dev"
+	},
+	"assets": {
+		"directory": "./public",
+		"binding": "ASSETS"
+	},
+	"d1_databases": [
+		{
+			"binding": "DB",
+			"database_name": "coin-store-db",
+			"database_id": "65846510-1e8c-4ea5-abd4-a1532d62fc56"
+		}
+	]
 }
